New UI with Compose fluent (#72)
* Added fluent theme

* No material3

* Fix colors

* New inspector

* Updated all dependenies and added compose hot reload

* Fixed global text colors

* Inline all colors alias func

* wip

* Slider setting changes

* Toolbar tweak

* Rename Main.kt to App.kt and update main class reference in build.gradle.kts

* New transformer library

* New pipeline stack

* Cleanup UI App architecture

* Fixed piepline card padding

* List config

* Fix list

* Data class desc

* clean

* good

* toolbar

* frameless windows

* Spin logo

* Frameless workihg

* Window buttons

* Fixed int slider

* General page

* Change transformer card

* Clean up

* Setting sections

* Drag reorder transformer

* ok?

* Fixed ordering warnings

* Added panel resizing

* Cleanup runtime materials settings