@@ -2,6 +2,7 @@ plugins {
     id("buildsrc.convention.kotlin-jvm")
     alias(libs.plugins.compose)
     alias(libs.plugins.compose.compiler)
+    alias(libs.plugins.compose.hotReload)
 }
 
 repositories {
@@ -16,14 +17,17 @@ dependencies {
     implementation(project(":grunt-main"))
 
     implementation(libs.filekit.dialogs)
+    implementation(libs.flatlaf)
     implementation(libs.kotlinReflect)
     implementation(compose.desktop.currentOs)
-    implementation(compose.material3)
+    implementation(libs.compose.fluent)
+    implementation(libs.compose.fluent.icons)
 }
 
 compose.desktop {
     application {
-        mainClass = "net.spartanb312.grunteon.ui.MainKt"
+        this.mainClass = "net.spartanb312.grunteon.ui.AppKt"
+        jvmArgs += listOf("--enable-native-access=ALL-UNNAMED")
         nativeDistributions {
             packageName = "Grunteon"
             packageVersion = rootProject.version.toString()
